--- a/src/styles/Forum.css
+++ b/src/styles/Forum.css
@@ -856,7 +856,7 @@
   color: #1a202c;
   margin: 0;
   white-space: normal;
-  font-family: 'EB Garamond', serif;
+  font-family: 'Segoe UI', sans-serif;
   line-height: 1.2;
 }
 
