--- a/src/styles/AnimatedText.css
+++ b/src/styles/AnimatedText.css
@@ -17,7 +17,7 @@
 
 /* Estilos para el título principal (h1) */
 .animated-text-container.animated-title {
-  font-family: "EB Garamond", serif;
+  font-family: "Segoe UI", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
@@ -32,7 +32,7 @@
 
 /* Estilos para el subtítulo (h2) */
 .animated-text-container.animated-subtitle {
-  font-family: "EB Garamond", serif;
+  font-family: "Segoe UI", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
@@ -44,7 +44,7 @@
 
 /* Estilos para el título de sección (h3) */
 .animated-text-container.animated-heading {
-  font-family: "EB Garamond", serif;
+  font-family: "Segoe UI", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
